--- a/article-2.html
+++ b/article-2.html
@@ -82,8 +82,15 @@
 </section>
 
 
-<script defer src="https://cdn.commento.io/js/commento.js"></script>
-<div id="commento"></div>
+<div id="cusdis_thread"
+  data-host="https://cusdis.com"
+  data-app-id="090bbc03-2d77-449c-974a-ea4f0fcfe30f"
+  data-page-id="{{ PAGE_ID }}"
+  data-page-url="{{ PAGE_URL }}"
+  data-page-title="{{ PAGE_TITLE }}"
+></div>
+<script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
+
   <!-- Footer -->
   <footer>
     <div class="container">
