--- a/active-listening-the-key-to-strong-relationships.html
+++ b/active-listening-the-key-to-strong-relationships.html
@@ -201,10 +201,10 @@
             <a href="https://strongrelationshiptips.com/10-tips-for-better-communication-in-relationships" class="read-more">Read More</a>
           </span>
           <span class="popular-post">
-            <img src="https://strongrelationshiptips.com/images/how-to-improve-communication-with-your-partner.webp" alt="How to Improve Communication with Your Partner">
-            <h3>How to Improve Communication with Your Partner</h3>
-            <p>Learn how to improve communication with your partner using practical tips like active listening</p>
-            <a href="https://strongrelationshiptips.com/how-to-improve-communication-with-your-partner" class="read-more">Read More</a>
+            <img src="https://strongrelationshiptips.com/images/how-to-avoid-miscommunication-in-relationships.webp" alt="How to Avoid Miscommunication in Relationships">
+            <h3>How to Avoid Miscommunication in Relationships</h3>
+            <p>Learn How to Avoid Miscommunication in Relationships using practical tips like active listening</p>
+            <a href="https://strongrelationshiptips.com/how-to-avoid-miscommunication-in-relationships" class="read-more">Read More</a>
           </span>
           <span class="popular-post">
             <img src="https://strongrelationshiptips.com/images/active-listening-the-key-to-strong-relationships.webp" alt="Active Listening: The Key to Strong Relationships">
